--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,7 @@
       </div>
       <div class="row">
         <%= render "shared/exchange_box" %>
+        <%= render "shared/bitcoin_box" %>
       </div>
     </div>
     <div class="col-lg-7 offset-lg-1 hidden-md-down title-box">
