--- a/app/views/shared/_bitcoin_box.html.erb
+++ b/app/views/shared/_bitcoin_box.html.erb
@@ -1,10 +1,10 @@
-<div class="exchange_box">
+<div class="bitcoin_box">
   <div class="card">
     <div class="card-header text-center">
-      Simule sua conversão
+      Converta para Bitcoin
     </div>
     <div class="card-block">
-      <%= form_tag("/exchange", method: "post", id: "exchange_form") do %>
+      <%= form_tag("/bitcoin", method: "post", id: "bitcoin_form") do %>
         <div class="local_currency">
           <div class="form-group">
             <p class="title">Moeda Local</p>
@@ -13,17 +13,10 @@
           <div class="form-group">
             <input type="number" name="quantity" id="quantity" class="form-control" placeholder="Quantidade ($10)" step="any" required>
           </div>
-        </div>
-        
-        <div class="destination_currency">
-          <div class="form-group">
-            <p class="title">Moeda Pretendida</p>
-            <%= select_tag "currency_destination", options_for_select(currency_select, "EUR"), class: "form-control", id: "currency_destination"%>
-          </div>
           <div class="form-group">
             <input type="text" id="result" name="result" class="form-control" placeholder="Resultado" readonly>
           </div>
-        </div>
+        </div>    
         
         <div>
           <button type="submit" class="btn btn-primary btn-exchange col-md-12">CONVERTER</button>
