add color style to card bitcoin

--- a/app/assets/stylesheets/_bitcoin_box.scss
+++ b/app/assets/stylesheets/_bitcoin_box.scss
@@ -2,7 +2,7 @@
     .card{
       border: 0;
       .card-header{
-        background-color: #878d99;
+        background-color: #DAA520;
         border-radius: 0;
         color: white;
         font-weight: 700;
@@ -14,8 +14,8 @@
           font-weight: 700;
         }
         .btn-exchange{
-          background-color: #5bc0de;
-          border-color: #5bc0de;
+          background-color: #DAA520;
+          border-color: #DAA520;
           border-radius: 0;
         }
       }
