--- a/app/views/shared/_bitcoin_box.html.erb
+++ b/app/views/shared/_bitcoin_box.html.erb
@@ -13,8 +13,9 @@
           <div class="form-group">
             <input type="number" name="quantity" id="quantity" class="form-control" placeholder="Quantidade ($10)" step="any" required>
           </div>
+          
           <div class="form-group">
-            <input type="text" id="result" name="result" class="form-control" placeholder="Resultado" readonly>
+            <input type="text" id="result" name="result" class="form-control" placeholder="Valor em Bitcoin" readonly>
           </div>
         </div>    
         
