--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-3 offset-lg-1 col-md-12 exchange_box">
+    <div class="col-lg-3 offset-lg-1 col-md-12 bitcoin_box">
       <div class="row">
         <div class="logo-box">
           <%= image_tag '/bit_logo.png', class: "img-responsive"%>
         </div>
       </div>
       <div class="row">
-        <%= render "shared/bitcoin_box" %>
-        
-        
+        <%= render "shared/bitcoin_box" %>   
+        <%= render "shared/exchange_box" %>       
       </div>
     </div>
     <div class="col-lg-7 offset-lg-1 hidden-md-down title-box">
@@ -23,23 +22,3 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3 offset-lg-1 col-md-12 exchange_box">
-      
-      <div class="row">
-        
-        <%= render "shared/exchange_box" %>
-        
-      </div>
-    </div>
-    <div class="col-lg-7 offset-lg-1 hidden-md-down title-box">
-      <div class="row">
-        <h2 class="title">Converta facilmente suas Moedas</h2>
-      </div>
-      <div class="row">
-        <h3 class="title">Para qualquer moeda no Mundo!</h3>
-      </div>
-    </div>
-  </div>
-</div>
