--- a/app/views/shared/_exchange_box.html.erb
+++ b/app/views/shared/_exchange_box.html.erb
@@ -26,7 +26,7 @@
         </div>
         
         <div>
-          <button type="submit" class="btn btn-primary btn-exchange col-md-12">CONVERTER</button>
+          <button type="submit" class="btn btn-primary btn-exchange col-md-12">CONVERSÃO</button>
         </div>
       <% end %>
     </div>
