--- a/app/views/shared/_bitcoin_box.html.erb
+++ b/app/views/shared/_bitcoin_box.html.erb
@@ -11,7 +11,7 @@
             <%= select_tag "currency", options_for_select(currency_select, "BRL"), class: "form-control", id: "bit_currency" %>
           </div>
           <div class="form-group">
-            <input type="number" name="quantity" id="bit_quantity" class="form-control" placeholder="Quantidade ($10)" step="any" required>
+            <input type="number" name="quantity" id="bit_quantity" class="form-control" placeholder="$10" step="any" required>
           </div>
           
           <div class="form-group">
