--- a/app/views/shared/_exchange_box.html.erb
+++ b/app/views/shared/_exchange_box.html.erb
@@ -11,10 +11,12 @@
             <%= select_tag "currency", options_for_select(currency_select, "BRL"), class: "form-control", id: "currency" %>
           </div>
           <div class="form-group">
-            <input type="number" name="quantity" id="quantity" class="form-control" placeholder="Quantidade ($10)" step="any" required>
+            <input type="number" name="quantity" id="quantity" class="form-control" placeholder="$10" step="any" required>
           </div>
         </div>
-        
+
+            <button class="fa fa-refresh" style="background:transparent;border:none" value="trocar" onclick="trocar('currency','currency_destination');"></button>
+         
         <div class="destination_currency">
           <div class="form-group">
             <p class="title">Moeda Pretendida</p>
