--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-3 offset-lg-1 col-md-12 bitcoin_box">
+    <div class="col-lg-3 offset-lg-1 col-md-12 exchange_box">
       <div class="row">
         <div class="logo-box">
           <%= image_tag '/bit_logo.png', class: "img-responsive"%>
