--- a/app/views/shared/_bitcoin_box.html.erb
+++ b/app/views/shared/_bitcoin_box.html.erb
@@ -1,4 +1,4 @@
-<div class="bitcoin_box">
+<div class="exchange_box">
   <div class="card">
     <div class="card-header text-center">
       Converta para Bitcoin
