I added functionality to get dynamic result

--- a/app/views/shared/_exchange_box.html.erb
+++ b/app/views/shared/_exchange_box.html.erb
@@ -28,7 +28,7 @@
         </div>
         
         <div>
-          <button type="submit" class="btn btn-primary btn-exchange col-md-12">CONVERSÃO</button>
+          <button hidden="hidden" class="btn btn-primary btn-exchange col-md-12">CONVERSÃO</button>
         </div>
       <% end %>
     </div>
