--- a/app/views/shared/_bitcoin_box.html.erb
+++ b/app/views/shared/_bitcoin_box.html.erb
@@ -20,7 +20,7 @@
         </div>    
         
         <div>
-          <button type="submit" class="btn btn-primary btn-exchange col-md-12">CONVERTER</button>
+          <button hidden="hidden" class="btn btn-primary btn-exchange col-md-12">CONVERTER</button>
         </div>
       <% end %>
     </div>
